# IntelligentRobotSystem

./: .gitignore  README.md
devel/: .catkin  .rosinstall  setup.sh
devel/lib/face_detection/: face_localizer_dnn  face_markers.py
devel/lib/navigation/: move_robot.py
devel/lib/pkgconfig/: face_detection.pc  navigation.pc  setup.pc  setupPkg.pc  setup_pkg.pc
devel/lib/setup/: map_goals
devel/lib/setup_pkg/: map_goals
devel/share/face_detection/cmake/: face_detectionConfig.cmake
devel/share/navigation/cmake/: navigationConfig.cmake
devel/share/setup/cmake/: setupConfig.cmake
devel/share/setupPkg/cmake/: setupPkgConfig.cmake
devel/share/setup_pkg/cmake/: setup_pkgConfig.cmake
src/color_recognition/: CMakeLists.txt  package.xml
src/color_recognition/scripts/: color_model_RF.sav  randomForest.py
src/color_recognition/srv/: ObjectColor.srv
src/cylinder_detection/: CMakeLists.txt  package.xml
src/cylinder_detection/launch/: cylinder_detect.launch  find_cylinder.launch
src/cylinder_detection/msg/: CylinderPoseColor.msg  CylindersList.msg
src/cylinder_detection/scripts/: cylinder_markers.py
src/cylinder_detection/src/: cylinder_segmentation.cpp
src/cylinder_detection/srv/: CylinderStatus.srv
src/face_detection/: CMakeLists.txt  package.xml
src/face_detection/launch/: face_detection_dnn.launch
src/face_detection/msg/: FacePoses.msg  FacesList.msg
src/face_detection/scripts/: face_localizer_dlib  face_localizer_dnn  face_markers.py  face_markers2.py  face_markersOld.py
src/face_detection/srv/: FaceMask.srv  FaceNormal.srv
src/move_arm/move_arm/: CMakeLists.txt  package.xml
src/move_arm/move_arm/launch/: rins_world.launch
src/move_arm/move_arm/launch/includes/: kobuki.launch.xml
src/move_arm/move_arm/scripts/: move_arm.py
src/navigation/: CMakeLists.txt  package.xml  setup.py
src/navigation/goals/: backup.txt  coordinates.txt  coordinates2.txt
src/navigation/images/: map.pgm
src/navigation/msg/: CalibrationMsg.msg
src/navigation/scripts/: auto_goals.py  common_methods.py  cylinder.py  cylinder_models.py  move_robot.py  move_robotOld.py  person.py  ring.py  task.py
src/qr_and_number_detection/: CMakeLists.txt  package.xml
src/qr_and_number_detection/msg/: DigitsMessage.msg  QrMessage.msg
src/qr_and_number_detection/scripts/: extract_digits.py  extract_qr.py  extract_speech.py
src/ring_detection/: CMakeLists.txt  package.xml
src/ring_detection/msg/: RingDetection.msg  RingPoseColor.msg  RingsList.msg
src/ring_detection/scripts/: detect_rings  ring_markers.py
src/ring_detection/srv/: RingVector.srv
src/setup/: CMakeLists.txt
src/setup/launch/: amcl_simulation.launch  rins_run.launch  rins_task2.launch  rins_task3.launch  rins_world.launch  rins_world_arm.launch
src/setup/maps/: de_dust2.pgm  de_dust2.yaml  firs_map.pgm  first_map.pgm  first_map.yaml
src/setup/worlds/: rins.world  rins_task2.world
src/sound/: CMakeLists.txt  package.xml
src/sound/launch/: robot_sound.launch
src/sound/scripts/: robot_sound.py
